# NIS_Protocol

./: .cursorrules  .dockerignore  .env.aws-ecs  .env.aws.example  .env.ecs-minimal  .env.example  .env.safe  .env.temp  .gitattributes  .gitignore  AEROSPACE_REDUNDANCY.md  AGI_STRUCTURE_COMPLETE.md  ALL_ISSUES_FIXED.md  ARCHITECTURE_FIX_COMPLETE.md  AUTONOMY_ANALYSIS.md  AWS_GPU_DEPLOYMENT.md  AWS_MIGRATION_OVERVIEW.md  AWS_PRODUCTION_READY.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  COMPLETE_ROBOTICS_INTEGRATION.md  COMPREHENSIVE_CODE_DATAFLOW_REVIEW.md  COMPREHENSIVE_TEST_RESULTS.md  CPU_LOCAL_TESTING.md  CURSOR_PATTERN_IMPLEMENTATION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKERFILE_VERIFICATION.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  DRONE_PROJECT_OVERVIEW.md  Dockerfile  Dockerfile.cpu  ENDPOINT_TESTING_PLAN.md  ENDPOINT_TEST_REPORT.md  ENDPOINT_TEST_RESULTS.md  EVIDENCE_BASED_DOCUMENTATION_GUIDE.md  EVIDENCE_LINKS.md  FINAL_IMPROVEMENT_STATUS_REPORT.md  FINAL_INTEGRATION_TEST_RESULTS.md  FINAL_TEST_REPORT.md  (+194 more)
.cursor/: mcp.json
architecture/: index.html
backups/: main_old_20251201_000753.py  main_pre_cleanup_20251201_000139.py
benchmarks/: __init__.py  benchmark_suite.py  nis_comprehensive_benchmark_suite.py  quick_benchmark.py  run_benchmarks.py
config/: agi_config.json  cognitive_orchestra_config.json  enhanced_infrastructure_config.json  enhanced_llm_config.json  llm_config.json  nginx.conf
configs/: complete.env.example  deployment.aws.env  google-service-account.json.example  protocol.env.example  protocol_routing.json  provider_registry.yaml  vibevoice_config.py
deploy/: README.md  ecs-task-definition-backend-cloudelligent.json  ecs-task-definition-backend.json  ecs-task-definition-runner-cloudelligent.json  ecs-task-definition-runner.json
dev/: COMPREHENSIVE_ACHIEVEMENTS_SUMMARY.md  ENDPOINT_TEST_RESULTS.md  FINAL_SYSTEM_TEST_REPORT.md  LICENSE  NIS_Protocol_v3_COMPLETE_Postman_Collection.json  agent_orchestration_analyzer.py  audit-report.json  automated_documentation_fixer.py  endpoint_test_results.json  enhanced_physics_validator.py  environment-template.txt  main_v31_fixed.py  main_v31_part2.py  main_v31_part3.py  minimal_test_server.py  nvidia_competitive_analysis.json  nvidia_competitive_analysis.py  nvidia_integration_plan.json  nvidia_integration_plan.py  nvidia_nis_hybrid_demo_results.json  nvidia_pretrained_integration_strategy.json  nvidia_pretrained_integration_strategy.py  physics_validation_results.json  quick_v31_test.py  rebuild_v31.sh  requirements-minimal.txt  setup.py  test_enhanced_capabilities.py  test_real_llm_integration.py  unicode_safe_audit.py  v31_main.py  validate_environment.py
diagrams/: emotional_state_system.md  nis_architecture.md
docs/: .index.html.swp  10X_SPEED_IMPLEMENTATION.md  10X_SPEED_OPTIMIZATION_ANALYSIS.md  AGENT_CONNECTION_GUIDE.md  AGI_FOUNDATION_ACHIEVEMENT.md  AGI_SYSTEM_OVERVIEW.md  AI_ENHANCEMENTS_COMPLETE.md  API_CONTRACT.md  API_Reference.md  ARCHITECTURE.md  AUTONOMOUS_AGENTS_COMPLETE.md  AUTONOMOUS_SYSTEM_COMPLETE.md  AUTONOMOUS_TEST_RESULTS.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_ISSUE.md  AWS_DEPLOYMENT_READY.md  AWS_PRODUCTION_INTEGRATION.md  BITNET_KIMI_INTEGRATION_PLAN.md  CAN_PROTOCOL_GUIDE.md  CLAIMS_TO_EVIDENCE_MAPPING.md  CLEANUP_SUMMARY.md  CLEAN_DOCUMENTATION_SUMMARY.md  CLOUDELLIGENT_PACKAGE_ANALYSIS.md  DATAFLOW_ANALYSIS.md  (+99 more)
(+1171 files in other folders)
